Some further response model changes
